@@ -1,3 +1,12 @@
+2008-09-19  Kai Tietz  <kai.tietz@onevision.com>
+
+	* shellapi.h: Replace _cdecl by __cdecl.
+	* netmon.h: Likewise.
+	* nmsupp.h: Likewise.
+	PR/2118228 by Jeremy Kolb
+	* winreg.h: Likewise.
+	* stralign.h: Likewise.
+
 2008-09-16  Kai Tietz  <kai.tietz@onevision.com>
 
 	Patch/2108279 by Jaroslav Smid
